--- a/docs/mine-hnt/hotspot-makers/approved-makers/approved-makers.mdx
+++ b/docs/mine-hnt/hotspot-makers/approved-makers/approved-makers.mdx
@@ -18,7 +18,7 @@ Since the introduction of [HIP19](https://github.com/helium/HIP/blob/master/0019
 | [SyncroB.it](https://syncrob.it/)      	| [SyncroB.it](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/syncrobit.md) | 2020-12-14 |[14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR](https://explorer.helium.com/accounts/14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR)|
 | [RAK Wireless/CalChip](https://www.calchipconnect.com/) | [RAK/CalChip](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/rak-wireless.md) | 2020-12-29 |[13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY](https://explorer.helium.com/accounts/13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY)|  
 | [EasyLinkin/Bobcat](https://www.bobcatminer.com)   | [EasyLinkin](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/easylinkin.md) | 2021-01-12 |[14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL](https://explorer.helium.com/accounts/14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL)|
-| [Kerlink](https://www.kerlink.com)   | [Kerlink](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md) | 2021-01-24 |[Not Yet Created]|
+| [Kerlink](https://www.kerlink.com)   | [Kerlink](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md) | 2021-02-24 |[13Mpg5hCNjSxHJvWjaanwJPBuTXu1d4g5pGvGBkqQe3F8mAwXhK](https://explorer.helium.com/accounts/13Mpg5hCNjSxHJvWjaanwJPBuTXu1d4g5pGvGBkqQe3F8mAwXhK)|
 | [HeNet BV/LongAP](https://www.longap.com) | [HeNet BV/LongAP](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/henet.md) | 2021-03-16 | [12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4](https://explorer.helium.com/accounts/12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4) |
 | [Smart Mimic](https://smartmimic.com) | [Smart Mimic](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/smart-mimic.md) | 2021-03-25 | [13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv](https://explorer.helium.com/accounts/13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv)
 
