--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -112,3 +112,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [HNT Staking](https://www.hntstaking.net)
 * [Bison Trails](https://www.bisontrails.co)
 * [Vanager](https://vanager.io)
+* [StakeJoy](https://stakejoy.com)
