update dragino.mdx for #gateway-development
change mention of #gateway to #gateway-development as channel name has changed

--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -16,7 +16,7 @@ LoRaWAN gateway such as the LPS8 or DLOS8 to work with the Helium network.
 
 Dragino Hotspots will only mine HNT through packet transfer, and is considered a non-PoC Light Hotspot. The ability to mine HNT with anything other than
 [Approved Hotspots](https://helium.com/mine) is not currently supported. Please
-join the [#gateway](https://discord.gg/helium) in the Helium Discord Server for
+join the [#gateway-development](https://discord.gg/helium) channel in the Helium Discord Server for
 the latest updates.
 
 :::
