Update lighthotspots.mdx to change #gateway to #gateway-development
change mention of #gateway to #gateway-development as channel name has changed

--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -19,7 +19,7 @@ This project is in progress and subject to change.
 
 :::info
 
-For real-time development and community support of Data Only Hotspots and Light Hotspots, please join the #gateway channel on [Helium Discord](https://discord.gg/helium)
+For real-time development and community support of Data Only Hotspots and Light Hotspots, please join the #gateway-development channel on [Helium Discord](https://discord.gg/helium)
 
 :::
 
