--- a/docs/api/blockchain/dc_burns.mdx
+++ b/docs/api/blockchain/dc_burns.mdx
@@ -17,7 +17,7 @@ import TabItem from "@theme/TabItem";
 GET https://api.helium.io/v1/dc_burns/sum
 ```
 
-Returns the total Data Credits (DC) burntfor the whole network in a given
+Returns the total Data Credits (DC) burned for the whole network in a given
 timeframe. Timestamps can be given in ISO 8601 format (e.g.
 `2020-08-27T00:00:00Z`) or in relative time (e.g. `-1 week`, which when url
 esacped becomes `-1%20week`). When ommitted the current time (UTC) is assumed.
