--- a/docs/api/blockchain/dc_burns.mdx
+++ b/docs/api/blockchain/dc_burns.mdx
@@ -20,7 +20,7 @@ GET https://api.helium.io/v1/dc_burns/sum
 Returns the total Data Credits (DC) burned for the whole network in a given
 timeframe. Timestamps can be given in ISO 8601 format (e.g.
 `2020-08-27T00:00:00Z`) or in relative time (e.g. `-1 week`, which when url
-esacped becomes `-1%20week`). When ommitted the current time (UTC) is assumed.
+escaped becomes `-1%20week`). When omitted the current time (UTC) is assumed.
 
 The results can also be bucketed in time by specifying a `bucket` query
 parameter which buckets information per bucket in the given timeframe. Data is
