--- a/docs/api/blockchain/dc_burns.mdx
+++ b/docs/api/blockchain/dc_burns.mdx
@@ -27,7 +27,9 @@ parameter which buckets information per bucket in the given timeframe. Data is
 bucketed by time. Valid bucket values include `hour`, `day` and `week`).
 
 For example to get the last 7 days of DC burns bucketed by day use the following
-path/parameters: `?min_time=-7%20day&bucket=day`
+path/parameters: 
+
+`?min_time=-7%20day&bucket=day`
 
 The block that contains the `max_time` timestamp is
 **excluded** from the result.
