--- a/docs/api/blockchain/dc_burns.mdx
+++ b/docs/api/blockchain/dc_burns.mdx
@@ -159,7 +159,7 @@ Return the current DC burn stats
 GET https://api.helium.io/v1/dc_burns
 ```
 
-List DC burn events. Events include a block, amount, type of burn and the
+Use this API to list DC burn events. Events include a block, amount, type of burn, and the
 address of the account the DC were burned out of. The oracle price that was
 active at the point the DC burn happened is also listed to enable calculating
 how much HNT the burnt DC represent.
