--- a/docs/api/blockchain/dc_burns.mdx
+++ b/docs/api/blockchain/dc_burns.mdx
@@ -162,7 +162,7 @@ GET https://api.helium.io/v1/dc_burns
 Use this API to list DC burn events. Events include a block, amount, type of burn, and the
 address of the account the DC were burned out of. The oracle price that was
 active at the point the DC burn happened is also listed to enable calculating
-how much HNT the burnt DC represent.
+how much HNT the burned DC represents.
 
 Note that this route does _not_ return the implicit HNT to DC conversion that
 happens when an account does not have enough DC available for a given
