update with screenshots

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -1,7 +1,7 @@
 ---
 id: app-wallet
 title: Helium App Wallet
-sidebar_label: App Wallet
+sidebar_label: Helium App Wallet
 slug: /wallets/app-wallet
 ---
 
