--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -9,21 +9,26 @@ slug: /wallets/app-wallet/transfer-hotspot
 
 As requested by the Community via HIP13, the Transfer Hotspot feature is
 available for Hotspot owners of the Network to transfer their Hotspots to
-another owner. Transfer Hotspots
+another owner. 
 
 This feature enables Hotspot owners to transfer ownership of a Hotspot to
 another user. Once transferred, the new owner will receive all future Hotspot
-mining rewards. Requirements:
+mining rewards. 
 
-- Only the owning wallet can initiate a transfer.
+
+### Requirements
+
+- Only the Hotspot owner can initiate a transfer.
 - This feature is only available on app version 2.8.0 or newer. Both parties
-  must have 2.8.0 or newer for Transfer Hotspots to succeed. Parties do not need
+  must have 2.8.0 or newer for Transfer Hotspots to succeed. 
+* Parties do not need
   to be physically next to the Hotspot for transfer to succeed.
 - This feature requires both users to have a valid Helium wallet account and the
   buyer must have enough balance in their wallet account to pay for the
   transaction fee which is typically 55,000 DC.
 - The Hotspot must be fully synced with the location asserted, and have recent
   network activity for the transaction to succeed.
+* **Recent Activity** is described as witness, beacon, or challenger activity in the past 1200 blocks. This is to ensure the Hotspot is fully functional for the protection of the buyer.
 
 :::warning
 
@@ -38,18 +43,36 @@ working condition.
 #### As a Seller, to initiate a Transfer Hotspot transaction:
 
 1. Navigate to the Hotspot to transfer and tap Settings > Transfer Hotspot.
+<img src={useBaseUrl("img/wallets/helium-app/transfer-entry.png")} />
+
 2. Acknowledge that you, the Seller, will no longer earn mining rewards from
    that Hotspot once transferred.
 3. Enter the Hotspot name in the text field to confirm you want to transfer the
    Hotspot.
+
+<img src={useBaseUrl("img/wallets/helium-app/transfer-initiate.png")} />
+
+
 4. You’ll see the payment user interface next. Enter the Buyer’s wallet address
    and a cost for the Hotspot (optional).
+
+<img src={useBaseUrl("img/wallets/helium-app/transfer-send-confirm.png")} />
+
 5. Press Send Transfer Request and a notification will appear on the Buyer’s
    notification center. The Hotspot transfer will not complete until the Buyer
    accepts the transaction. Note: If you need to change the price, you’ll need
    to cancel the transaction. Please see the Cancel Transaction Section.
+
+
 6. Once the Buyer accepts the transfer Hotspot transaction, the Seller will
    receive a confirmation in their notification center.
+
+
+<img src={useBaseUrl("img/wallets/helium-app/transfer-notification.png")} />
+
+
+<img src={useBaseUrl("img/wallets/helium-app/transfer-complete-transaction.png")} />
+
 7. Once the transfer Hotspot transaction clears the blockchain, the Hotspot will
    no longer appear in the Sellers account.
 8. The Seller will see an activity entry on their Account page showing the
@@ -76,12 +99,20 @@ transaction is no longer valid.
 1. Once the Seller has initiated the transaction, a notification will appear in
    the Buyer’s notification center.
 2. Tap on the notification to view the transaction.
+
+
+<img src={useBaseUrl("img/wallets/helium-app/transfer-notification.png")} />
+
 3. A payment user interface will appear with the Hotspot name, the amount
    requested, and the transaction fee. Also included is a “last activity
    reported” check. You want to see a very recent "last activity reported", not
    days, weeks, or months. This is a courtesy to illustrate the Hotspot was
    recently mining, but does not guarantee the Hotspot will arrive functional.
    Make sure this is a trustworthy Seller.
+
+
+<img src={useBaseUrl("img/wallets/helium-app/transfer-complete-transaction.png")} />
+
 4. Press Complete Transfer to submit the transaction to the blockchain. Note:
    The Buyer pays for the transaction fee and the Buyer must have a non-zero
    wallet balance in order for the transfer to succeed.
