--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -19,7 +19,7 @@ Helium Network Tokens (HNT), and/or Data Credits (DC).
 
 Depending on your situation, one of the wallets here may be the best fit.
 
-### App Wallet
+### Helium App
 
 The Helium App wallet is by far the easiest to use. It may be downloaded for
 [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) or
