--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -5,6 +5,9 @@ sidebar_label: Transfer Hotspot
 slug: /wallets/app-wallet/transfer-hotspot
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+
 # Transfer Hotspot
 
 As requested by the Community via HIP13, the Transfer Hotspot feature is
