--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -43,7 +43,7 @@ working condition.
 
 :::
 
-#### As a Seller, to initiate a Transfer Hotspot transaction:
+## As a Seller, to initiate a Transfer Hotspot transaction:
 
 1. Navigate to the Hotspot to transfer and tap Settings > Transfer Hotspot.
 <img src={useBaseUrl("img/wallets/helium-app/transfer-entry.png")} />
@@ -81,7 +81,7 @@ working condition.
 8. The Seller will see an activity entry on their Account page showing the
    Hotspot Transfer.
 
-#### As a Seller, to cancel Transfer Hotspot transaction
+## As a Seller, to cancel Transfer Hotspot transaction
 
 1. To cancel a pending transfer Hotspot transaction, go to the Hotspot, tap
    Settings, find Transfer Hotspot, and press Cancel
@@ -97,7 +97,7 @@ transaction is no longer valid.
 
 :::
 
-#### As a Buyer, to accept a Transfer Hotspot transaction:
+## As a Buyer, to accept a Transfer Hotspot transaction:
 
 1. Once the Seller has initiated the transaction, a notification will appear in
    the Buyer’s notification center.
@@ -122,60 +122,63 @@ transaction is no longer valid.
 5. Buyers will see a pending transfer Hotspot transaction on the Account page,
    and once cleared, the Hotspot will appear in the Hotspot list.
 
-### Common Questions
+## Common Questions
 
-#### Can the price be zero?
+### Can the price be zero?
 
 Yes. The Hotspot price can be 0 on the blockchain if you’d like to complete the
 purchase using fiat (PayPal is highly recommended for Buyer protection).
 
-#### Can I undo the transaction?
+### Can I undo the transaction?
 
 No. Once transferred, the Hotspot and its mining rewards moving forward belong
 to the Buyer.
 
-#### Who pays for the transaction fee?
+### Who pays for the transaction fee?
 
 The Buyer pays for the transaction fee.
 
-#### Is this available on the CLI?
+### Is this available on the CLI?
 
 Yes. Wallet CLI is available for this feature.
 https://developer.helium.com/blockchain/blockchain-cli
 
-#### Can I change the price after sending the transfer to the Buyer, but BEFORE they accept?
+### Can I change the price after sending the transfer to the Buyer, but BEFORE they accept?
 
 Yes. Go to the Hotspot and cancel the transfer. Create a new transfer Hotspot
 request with the new price.
 
-#### Will this be recorded in the blockchain?
+### Will this be recorded in the blockchain?
 
 Yes. Transfer Hotspot transactions are on-chain.
 
-#### What if the activity check reveals the Hotspot hasn’t done anything recently?
+### What if the activity check reveals the Hotspot hasn’t done anything recently?
 
 You won’t be able to transfer the Hotspot.
 
-#### I saw a transfer hotspot notification but when I open the app, it's not there. Where did it go?
+### I saw a transfer hotspot notification but when I open the app, it's not there. Where did it go?
 
 If you are not on 2.8.0 or later, you will not be able to see the notification.
 Upgrade the app to 2.8.0 and try again.
 
-#### How do I make sure the Hotspot physically changes hands?
+If you're on 2.8.0 or later, you may need to sign out of the app and sign back in with your 12 words.
+**Before you do this, make sure your 12 words are written down and correct. Verify on by tapping on More > Reveal Words in the app.**
+
+### How do I make sure the Hotspot physically changes hands?
 
 It is the buyer's responsibility to confirm the Hotspot is fully functional and
 will arrive in the same, working condition.
 
-#### Do I need to be next to the Hotspot to transfer or receive?
+### Do I need to be next to the Hotspot to transfer or receive?
 
 No. You do not need to be physically next to the Hotspot as a buyer or seller to
 transfer the Hotspot.
 
-#### Is the history of the Hotspot transferred to the new owner as well?
+### Is the history of the Hotspot transferred to the new owner as well?
 
 Yes. All mining history from the Hotspot will transfer to the new owner as well.
 This cannot be cleared as all history is from the ledger.
 
-#### Will I be able to see the history of all transfers for a Hotspot in explorer?
+### Will I be able to see the history of all transfers for a Hotspot in explorer?
 
 Yes. Transferred Hotspots will show up as a transaction in Explorer.
