--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -27,7 +27,7 @@ For real-time development and community support of Data Only Hotspots and Light 
 
 Light Hotspots are the evolution of how LoRaWAN gateways will interact with the Helium blockchain. Since the genesis block, the Helium blockchain has run entirely on the physical Hotspot itself. As the blockchain network grows, each Hotspot running a full node undergoes increasing load and are starting to fall out of sync due to the higher compute requirements. 
 
-To mitigate this, the Hotspot's consensus work will be moved off of physical Hotspots and onto Validators. This will simplify the architecture immensely, an enable us to grow the Network exponentially while keeping blocktimes and epochs stable. 
+To mitigate this, the **Hotspot's consensus work will be moved off of physical Hotspots and onto Validators**. This will simplify the architecture and enable us to grow the Network exponentially while keeping blocktimes and epochs stable. 
 
 As all approved Hotspots transition to a Light Hotspot architecture, we also introduce a new type of Hotspot known as Data Only Hotspots to satisfy the increasing demand and continue to expand network coverage.
 
@@ -59,7 +59,7 @@ This image shows the progression to Light Hotspots, with the role of Miner being
 
 The bulk of the code that enables Light Hotspots on actual LoRaWAN gateways is called [gateway-rs](https://github.com/helium/gateway-rs). It's easiest to think of this as Helium's next-generation packet forwarder.
 
-Development of this code takes place in the above GitHub repo, as well at the `#gateway` channel on the [Helium Discord Server](https://discord.gg/helium).
+Development of this code takes place in the above GitHub repo, as well at the `#gateway-developement` channel on the [Helium Discord Server](https://discord.gg/helium).
 
 
 
@@ -80,7 +80,7 @@ At the completion of Milestone 1, any LoRaWAN gateways running [gateway-rs](http
 #### Add Hotspot to Blockchain
 
 * **Target Completion: June**
-* **Status: IN DEVELOPMENT**
+* **Status: Pending Activation on Mainnet**
 
 At the completion of Milestone 1.5, Data Only Hotspots can be added to the blockchain, assert its location, and be seen on explorer.helium.com. 
 
