--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -101,7 +101,7 @@ As is the case with every transaction on the Helium blockchain, `staking` requir
 
 ## Run a Validator
 
-With you wallet funded, it's time to deploy and run the actual Validator.
+With your wallet funded, it's time to deploy and run the actual Validator.
 
 :::warning
 
