--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -17,6 +17,7 @@ running.
 
 - [buy an OUI](/use-the-network/buy-an-oui)
 - [run Console](/use-the-network/run-console)
+- [deploy Console](/use-the-network/deploy-console)
 
 Before pursuing this configuration though, it is worth considering.
 
