Pull dedicated page about transition to mainnet

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -32,7 +32,7 @@ Validators are a new entity on the Helium Blockchain that perform the work of th
 
 **Testnet to Mainnet Migration**
 
-There is no direct migration path to move Testnet Validators to Mainnet. [Details on how to migrate are here.](/mine-hnt/validators/testnet-to-mainnet-migration)
+There is no direct migration path to move Testnet Validators to Mainnet. To deploy on Mainnet, follow the deployment guide listed above. 
 
 :::
 
