Updates Discord channel for coverage mapping

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -15,7 +15,7 @@ The Mappers coverage mapping project is a crowd-sourced effort to build a cohesi
 Mapping data is viewable at [mappers.helium.com](https://mappers.helium.com/). The Mappers tool allows you to see the areas that 
 have been explored by voluntary community mappers and the Helium hotspots that have provided coverage to those areas.
 
-Be sure to check out the ongoing conversation in the dedicated #coverage-mapping and #mappers channels on the [Helium Discord 
+Be sure to check out the ongoing conversation in the dedicated #mappers channel on the [Helium Discord 
 Server](https://discord.gg/helium).
 
 ## Mappers Newsletter
