--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -22,4 +22,4 @@ Based on early tests, validator node requirements include:
 - If using AWS, a t2.large or t2.xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with similar capabilities should be the target.
 - Static IP address with ports `2154`(TCP) and `8080`(TCP) opened in your firewall with a route available to your validator host.
 - Running on stable network connection free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
-- It is [discouraged to run Validators at home](https://docs.helium.com/mine-hnt/validators/faqs-resources-providers/#technical).
+- It is [discouraged to run Validators at home](/mine-hnt/validators/faqs-resources-providers/#technical).
