add console 2.0 beta page and sidebar

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -18,6 +18,8 @@ Device Management includes:
 - Device ID registration and seamless, secure onboarding and authentication
 - Data Credits for utilizing the Helium Network
 
+## [Console 2.0 Beta](/use-the-network/console/console-v2-beta)
+
 Console is available as a free to use hosted application at
 [console.helium.com](https://console.helium.com).
 
