--- a/docs/mine-hnt/full-hotspots/full-hotspots.mdx
+++ b/docs/mine-hnt/full-hotspots/full-hotspots.mdx
@@ -9,8 +9,8 @@ slug: /mine-hnt/full-hotspots
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Full Hotspots are Helium coverage providers that can participate in all
-potential reward activity available to Hotspots. Compared to a Data Only
-Hotspots, Full Hotspots are eligible for
+potential reward activity available to Hotspots. Compared to a [Data Only
+Hotspots](/mine-hnt/data-only-hotspots), Full Hotspots are eligible for
 [Proof-of-Coverage](/blockchain/proof-of-coverage) Rewards.
 
 Full Hotspots may only be manufactured by approved **Makers**. These are
