--- a/docs/use-the-network/light-hotspots/light-hotspots.mdx
+++ b/docs/use-the-network/light-hotspots/light-hotspots.mdx
@@ -1,8 +1,8 @@
 ---
 id: light-hotspots
-title: Light Hotspot Project (Beta)
-sidebar_label: Light Hotspot Project
-slug: /mine-hnt/light-hotspots
+title: Light Hotspot Client
+sidebar_label: Light Hotspot Client
+slug: /use-the-network/light-hotspots
 ---
 
 # Light Hotspots - Beta
@@ -10,7 +10,7 @@ slug: /mine-hnt/light-hotspots
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 This document describes the architecture and technical roadmap planned for
-converting exisiting Approved Hotspots to Light Hotspots. As part of this
+converting existing Approved Hotspots to Light Hotspots. As part of this
 migration, we will also introduce a new Hotspot variant onto the network, called
 a Data Only Hotspot (more below).
 
