update txn fees around hotspots

--- a/docs/blockchain/transaction-fees/transaction-fees.mdx
+++ b/docs/blockchain/transaction-fees/transaction-fees.mdx
@@ -30,8 +30,9 @@ based on the current $USD/HNT price as defined by the HNT Price Oracle.)
 | :------------------------------ | :--------------------------------------------------------------------------------------------------------------------------- | :------------ | :---------- |
 | Send HNT                        | Transferring HNT from wallet to wallet                                                                                       | `Variable`    | `Variable`  |
 | Transferring Device Packet Data | Fee paid by device owner when sending or receiving sensor data. Metered per 24 bytes.                                        | `1`           | `$.00001`   |
-| Add Miner                       | Fee paid to add Miner to the blockchain. (**Only applies to non-Helium Hotspots.)**                                          | `4000000`     | `$40`       |
-| Assert Miner Location           | Required when asserting a Gateway's location. \(The **first two assertions** for Helium Hotspots are paid by Helium, Inc. \) | `1000000`     | `$10`       |
+| Add Full Hotspot                | Fee paid to add full hotspot to the blockchain. **Fee is generally covered by hotspot maker**.                               | `4000000`     | `$40`       |
+| Add Data Only Hotspot           | Fee paid to add a data only hotspot to the blockchain.                                                                       | `500000`      | `$5`       |
+| Assert Hotspot Location         | Required when asserting a Gateway's location. \(The **first assertions** is generaly covered by hotspot maker\)             | `1000000`     | `$10`       |
 | Purchasing a blockchain OUI     | Buy an OUI from the Helium blockchain                                                                                        | `10000000`    | `$100`      |
 | Purchasing a blockchain Subnet  | Buy a Subnet from the Helium blockchain                                                                                      | `10000000`    | `$100`      |
 
