--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -9,6 +9,11 @@ slug: /mine-hnt/data-only-hotspots
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
+:::warning
+Adding Light Hotspots is not yet enabled on chain, but is expected to be
+released in early July. This guide is released for preparation only.
+:::
+
 Data Only Hotspots are eligible for **Network Data Transfer Rewards** but not
 **Proof of Coverage Rewards**.
 
