add links to other wallet use-cases

--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -13,6 +13,11 @@ wallet options but it also requires more technical knowledge. As such, it is
 suitable for all types of transactions, but requires more caution on behalf of
 its users.
 
+Once you've covered the basics here, you can explore more specific use-cases
+for the wallet:
+* [add and assert data only hotspot](/mine-hnt/data-only-hotspots)
+* [add validator](/mine-hnt/validators/mainnet/deployment-guide#stake-hnt-to-your-validator)
+
 ## Installing CLI Wallet
 
 Releases of the CLI wallet are
