clarify what is earned

--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -19,8 +19,7 @@ Data Only Hotspots are eligible for **Network Data Transfer Rewards** but not
 
 Since Data Only Hotspots do not earn Proof of Coverage rewards, they may be
 permissionlessly added to the blockchain. Once added to the blockchain and
-with location asserted, they will earn data credits when forwarding network
-data.
+with location asserted, they will earn $HNT when forwarding network data.
 
 # Setup a data only hotspot
 
