--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -10,7 +10,7 @@ slug: /mine-hnt/data-only-hotspots
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::warning
-Adding Light Hotspots is not yet enabled on chain, but is expected to be
+Adding Data Only Hotspots is not yet enabled on chain, but is expected to be
 released in early July. This guide is released for preparation only.
 :::
 
